--- a/app/kitchen/webapp/test/flpSandbox.html
+++ b/app/kitchen/webapp/test/flpSandbox.html
@@ -43,10 +43,10 @@
                 }
             },
             applications: {
-                "cloudkitchen-tile": {
-                    title: "cloudkitchen",
+                "comsumanthnnrgkitchen-tile": {
+                    title: "kitchen details",
                     description: "An SAP Fiori application.",
-                    additionalInformation: "SAPUI5.Component=cloudkitchen",
+                    additionalInformation: "SAPUI5.Component=com.sumanth.nnrg.kitchen",
                     applicationType: "URL",
                     url: "../"
                 }
@@ -64,7 +64,7 @@
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-compatVersion="edge"
         data-sap-ui-language="en"
-        data-sap-ui-resourceroots='{"cloudkitchen": "../"}'
+        data-sap-ui-resourceroots='{"com.sumanth.nnrg.kitchen": "../"}'
         data-sap-ui-frameOptions="allow"> // NON-SECURE setting for testing environment
     </script>
 
